# lessons_notebooks

./: first_demo.ipynb  lesson_1.ipynb  lesson_3.ipynb  lesson_4.ipynb  lesson_6.ipynb  orders_sum.csv  pyproject.toml
Python/: Lecture 2 (Списки и цикл for).ipynb  Lecture 4 (Функции).ipynb  Lecture 8 (Извлечение данных из веб-страниц).ipynb  Lecture 9 (Работа с открытыми API с помощью XML).ipynb
data science/: 00 - Project - Your First Data Science Project.ipynb
extra/: Lecture 13 (Ещё о pandas мультииндексы, картинки и немного о погоде).ipynb  Lecture 3 (Ввод-вывод списков и проверка условий).ipynb
lesson 0/: reviews-notebook.ipynb
lesson 0/data/: logs_grades.csv  Ростикс.csv  Ростикс_предобработка.csv  Спортмастер.csv  Спортмастер_предобработка.csv  Спортмастер_тональность.csv
lesson_1/: lesson_1.ipynb
lesson_1/data/: sw_templates.json  test.txt  test1.txt  test2.txt
lesson_2/: lesson_2.ipynb  xkcd.ipynb
lesson_3/: lesson_3.ipynb
lesson_4/: lesson_5.ipynb
lesson_5/: Dockerfile.txt  dash.ipynb  lesson_5.ipynb  power_bi_test.pbix  script_for_pbi.py
lesson_5/dash_lesson_5/: README.md  requirements.txt
lesson_5/dash_lesson_5/app/: main.py  queries.py
lesson_6/: lesson_6.ipynb
