[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
notebook = "^7.0.4"
ipykernel = "^6.25.2"
pandas = "^2.1.1"
exchangelib = "^5.1.0"
matplotlib = "^3.8.0"
plotly = "^5.17.0"
ipywidgets = "^8.1.1"
jupyter-dash = "^0.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
